[package]
name = "dendron-handler"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
directories = "6.0.0"
elevated-command = "1.1.2"
registry = "1.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
shellexpand = "3.1.1"
url = "2.5.4"
utfx = "0.1.0"
which = "7.0.3"
